--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-sse": "^0.5.3",
+    "socket.io": "^4.7.2"
   }
 }
